corrección de errores ortográficos
corrección de errores ortográficos

--- a/SAFE_PARKING_FRONT/src/app/components/membresia/creaedita-membresia/creaedita-membresia.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/creaedita-membresia/creaedita-membresia.component.html
@@ -21,7 +21,7 @@
   <div class="container">
     <form [formGroup]="form" (submit)="registrar()" class="example-form">
       <div class="titulo">
-        <h2>REGISTRO DE MEMBRESIAS</h2>
+        <h2>REGISTRO DE MEMBRESÍAS</h2>
       </div>
       <br />
       <!-- Categoria sección -->
