--- a/SAFE_PARKING_FRONT/src/app/components/membresia/buscar-membresia/buscar-membresia.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/buscar-membresia/buscar-membresia.component.html
@@ -30,7 +30,7 @@
     <div class="generic-details" *ngIf="membresia">
       <h2 class="generic-heading">Detalles de la membresia</h2>
       <div class="generic-box">
-        <h1>Tipo de membresia</h1>
+        <h1>Tipo de membresía</h1>
         <p>{{ membresia.tipoMembresia }}</p>
       </div>
       <div class="generic-box">
@@ -38,7 +38,7 @@
         <p>{{ membresia.fechaInicio }}</p>
       </div>
       <div class="generic-box">
-        <h1>Fecha de expiracion</h1>
+        <h1>Fecha de expiración</h1>
         <p>{{ membresia.fechaFin }}</p>
       </div>
       <div class="generic-box">
