--- a/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/listar-admin-rol/listar-admin-rol.component.html
@@ -25,7 +25,7 @@
     </mat-form-field>
     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
       <ng-container matColumnDef="idRol">
-        <th mat-header-cell *matHeaderCellDef>Codigo</th>
+        <th mat-header-cell *matHeaderCellDef>Código</th>
         <td mat-cell *matCellDef="let element">
           {{ element.idRol }}
         </td>
